# diesel-derive-more

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: db_enum.rs  default_insertable.rs  lib.rs
tests/: .env  db_enum.rs  default_insertable.rs
tests/migrations/20170220223755_test_table/: down.sql  up.sql
