[package]
name = "models-derive"
version = "0.1.0"
authors = ["Giorgos Georgiou <4.blood@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
syn = "*"
quote = "*"

[dependencies.diesel]
version = "*"
features = ["postgres", "chrono"]

[dev-dependencies.dotenv]
version = "*"

[dev-dependencies.serde_json]
version = "*"

[dev-dependencies.diesel_codegen]
version = "*"
features = ["postgres"]

[dev-dependencies.serde]
version = "*"

[dev-dependencies.serde_derive]
version = "*"
