[package]
name = "models-derive"
version = "0.1.0"
authors = ["Giorgos Georgiou <4.blood@gmail.com>"]

[lib]
proc-macro = true

[features]
serialization = ["serde", "serde_derive"]

[dependencies]
syn = "*"
quote = "*"

[dependencies.diesel]
version = "*"
features = ["postgres", "chrono"]

[dependencies.serde]
version = "*"
optional = true

[dependencies.serde_derive]
version = "*"
optional = true

[dev-dependencies.dotenv]
version = "*"

[dev-dependencies.serde_json]
version = "*"

[dev-dependencies.diesel_codegen]
version = "*"
features = ["postgres"]
