[package]
name = "diesel-derive-more"
version = "1.1.3"
authors = ["Giorgos Georgiou <giorgos.georgiou@outlook.com>"]
description = "Additional derives to use with diesel to remove some boilerplate code"
repository = "https://github.com/behos/diesel-derive-more"
keywords = ["diesel", "sql", "enum", "insertable"]
license = "Apache-2.0"
readme = "README.md"

[lib]
proc-macro = true

[features]
serialization = ["serde", "serde_derive"]

[dependencies]
syn = "~0.12"
quote = "~0.4"

[dependencies.diesel]
version = "~1"
features = ["postgres", "chrono"]

[dependencies.serde]
version = "~1.0"
optional = true

[dependencies.serde_derive]
version = "~1.0"
optional = true

[dev-dependencies.dotenv]
version = "~0.11"

[dev-dependencies.serde_json]
version = "~1.0"
